force-app/main/default/objects/Bike__c/fields/Bike_CC__c.field-meta.xml
<CustomField>
    <fullName>Bike_CC__c</fullName>
    <label>Bike CC</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>125</fullName>
            </value>
            <value>
                <fullName>155</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>310</fullName>
            </value>
            <value>
                <fullName>390</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>