force-app/main/default/objects/Bike__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BAJAJ</fullName>
            </value>
            <value>
                <fullName>HUSQVARNA</fullName>
            </value>
            <value>
                <fullName>KAWASAKI</fullName>
            </value>
            <value>
                <fullName>KTM</fullName>
            </value>
            <value>
                <fullName>ROYAL ENFIELD</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>YAMAHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>