force-app/main/default/objects/Bike__c/fields/Brand_logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_logo__c</fullName>
    <formula>IMAGE(&quot;/p/5j000005LPWh/a/5j000000sjLe/dwHB0nHBYq0dH1mjKgocYZ5CPIg3qulC7xo1GeaiNsI&quot;, &quot;logo&quot;, 64, 64)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand logo</label>
    <type>Text</type>
</CustomField>