force-app/main/default/objects/Bike__c/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>CD</label>
    <type>Date</type>
</CustomField>