force-app/main/default/objects/Bike__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PULSAR 220F</fullName>
            </value>
            <value>
                <fullName>PULSAR RS200</fullName>
            </value>
            <value>
                <fullName>PULSAR NS200</fullName>
            </value>
            <value>
                <fullName>NINJA 300</fullName>
            </value>
            <value>
                <fullName>NINJA Z800</fullName>
            </value>
            <value>
                <fullName>NINJA Z900</fullName>
            </value>
            <value>
                <fullName>R15 V3</fullName>
            </value>
            <value>
                <fullName>R15 V4</fullName>
            </value>
            <value>
                <fullName>FZ 25</fullName>
            </value>
            <value>
                <fullName>RC 200</fullName>
            </value>
            <value>
                <fullName>RC 125</fullName>
            </value>
            <value>
                <fullName>RC 390</fullName>
            </value>
            <value>
                <fullName>DUKE 250</fullName>
            </value>
            <value>
                <fullName>APACHE RR 310</fullName>
            </value>
            <value>
                <fullName>BULLET 350</fullName>
            </value>
            <value>
                <fullName>CONTINENTAL GT 650</fullName>
            </value>
            <value>
                <fullName>VITPILEN 251</fullName>
            </value>
            <value>
                <fullName>VITPILEN 401</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>