force-app/main/default/objects/Bike__c/validationRules/Bike_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bike_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name ) &lt; 2</errorConditionFormula>
    <errorMessage>Invalid bike Name</errorMessage>
</ValidationRule>