force-app/main/default/objects/Bike__c/listViews/KTM_Bikes.listView-meta.xml
<ListView>
    <fullName>KTM_Bikes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>KTM</value>
    </filters>
    <label>KTM BIKES</label>
</ListView>