force-app/main/default/objects/Bike__c/listViews/PULSAR_BIKES.listView-meta.xml
<ListView>
    <fullName>PULSAR_BIKES</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>BAJAJ</value>
    </filters>
    <label>PULSAR BIKES</label>
    <sharedTo>
        <group>AdminGroup</group>
    </sharedTo>
</ListView>