force-app/main/default/objects/Bike__c/listViews/TVS_Bikes.listView-meta.xml
<ListView>
    <fullName>TVS_Bikes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>TVS</value>
    </filters>
    <label>TVS BIKES</label>
</ListView>