force-app/main/default/objects/Bike__c/listViews/YAMAHA_BIKES.listView-meta.xml
<ListView>
    <fullName>YAMAHA_BIKES</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>YAMAHA</value>
    </filters>
    <label>YAMAHA BIKES</label>
    <sharedTo>
        <group>AdminGroup</group>
    </sharedTo>
</ListView>